--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,3 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<anfo-header></anfo-header>
-<anfo-navbar></anfo-navbar>
-
+<app-header></app-header>
+<app-navbar></app-navbar>
+<router-outlet></router-outlet>
