--- a/src/app/commons/header/header.component.html
+++ b/src/app/commons/header/header.component.html
@@ -1,6 +1,1 @@
-<div class="jumbotron">
-    <h1 class="display-4">Cabecera Formulario</h1>
-    <p class="lead">Formulario en Angular</p>
-    <hr class="my-4">
-    <p>Ejercicio a 03/07/19</p>
-  </div>
+<header class = "jumbotron"><h1 class="text-center display-2">Cabecera de la aplicación</h1></header>
